# app/Models/Account.php
@@ -5,6 +5,7 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\SoftDeletes;
+use Illuminate\Support\Facades\DB;
 
 class Account extends Model
 {
@@ -13,6 +14,34 @@ class Account extends Model
     protected $table = 'accounts';
 
     protected $fillable = ['customerId', 'name'];
+
+    public function getSold($accountId)
+    {
+        return DB::table('accounts')
+            ->select(DB::raw('sum(transactions.amount) as sold'))
+            ->where('accounts.id', '=', $accountId)
+            ->join('transactions', 'accounts.id', '=', 'transactions.accountId')
+            ->first();
+    }
+
+    public function getCustomerSold($customerId)
+    {
+        return DB::table('accounts')
+            ->select(DB::raw('sum(transactions.amount) as sold'))
+            ->where('accounts.customerId', '=', $customerId)
+            ->join('transactions', 'accounts.id', '=', 'transactions.accountId')
+            ->first();
+    }
+
+    public function getCustomerSubSold($customerId)
+    {
+        return DB::table('accounts')
+            ->select('accounts.id', DB::raw('sum(transactions.amount) as sold'))
+            ->where('accounts.customerId', '=', $customerId)
+            ->join('transactions', 'accounts.id', '=', 'transactions.accountId')
+            ->groupBy('accounts.id')
+            ->get();
+    }
 
     public function customer()
     {
