# app/Models/Customer.php
@@ -4,6 +4,7 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Support\Facades\DB;
 
 class Customer extends Model
 {
@@ -11,11 +12,11 @@ class Customer extends Model
 
     protected $table = 'customers';
 
-    protected $fillable = ['createdBy', 'firstname', 'lastname', 'phone'];
+    protected $fillable = ['createdById', 'firstname', 'lastname', 'phone'];
 
     public function createdBy()
     {
-        return $this->belongsTo('App\Models\User', 'createdBy');
+        return $this->belongsTo('App\Models\User', 'createdById');
     }
 
     public function accounts()
