# app/Models/Transaction.php
@@ -10,15 +10,29 @@ class Transaction extends Model
 {
     use HasFactory, SoftDeletes;
 
-    protected $table = ['accountId', 'recipientId', 'statusId', 'amount'];
+    public const STATUS_INIT = 'INIT';
+    public const STATUS_SUCCESS = 'SUCCESS';
 
-    public function status()
-    {
-        return $this->belongsTo('App\Models\Status');
-    }
+    public const TYPE_DEPOSIT = 'DEPOSIT';
+    public const TYPE_SEND = 'SEND';
+    public const TYPE_RECEIVE = 'RECEIVE';
+
+    protected $table = 'transactions';
+
+    protected $fillable = ['accountId', 'recipientId', 'amount', 'status', 'type', 'fromId', 'depositAgentId'];
 
     public function account()
     {
         return $this->belongsTo('App\Models\Account');
+    }
+
+    public function depositAgent()
+    {
+        return $this->belongsTo('App\Models\User', 'depositAgentId');
+    }
+
+    public function recipient()
+    {
+        return $this->belongsTo('App\Models\User', 'recipientId');
     }
 }
